--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
     "unsplash-js": "^4.6.0"
   },
